fix: different scrollbar widths and windows mac issue

--- a/assets/global.css
+++ b/assets/global.css
@@ -39,7 +39,7 @@ h4 {
 
 /* purgecss ignore */
 .preventScrolling {
-  @apply fixed overflow-hidden pr-15;
+  @apply fixed overflow-hidden;
 }
 
 @screen md {
